exercicios/Kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app01
spec:
  replicas: 3 # O Kubernetes garantirá que 3 pods estejam rodando
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: app01
        image: basic-load-balancer-docker-app1:latest # Aqui você usa o nome da sua imagem local!
        imagePullPolicy: Never # MUITO IMPORTANTE!
        ports:
        - containerPort: 3000
