exercicios/Kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
spec:
  selector:
    app: backend-app # O seletor que aponta para os Pods do Deployment
  type: NodePort
  #type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 # A porta do Service
      targetPort: 3000 # A porta do Pod onde a aplicação está rodando
