exercicios/Kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort # Expor o serviço para fora do cluster
  #type: ClusterIP
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80 # A porta do Service
    targetPort: 3000 # A porta do contêiner onde o front-end está rodando
